tests/toylang/pos/000134_cdrc2.toylang
program a = { while a do while a do sleep; } .
