tests/toylang/neg/001595_mutation.toylang
program a = { while a do : sleep; } .
